create basic backend. and docker composed

--- a/musicdaemon/Dockerfile
+++ b/musicdaemon/Dockerfile
@@ -1,12 +1,4 @@
-FROM alpine:latest
-
-RUN apk add --no-cache python3 && \
-		python3 -m ensurepip && \
-		rm -r /usr/lib/python*/ensurepip && \
-		pip3 install --upgrade pip setuptools && \
-		if [ ! -e /usr/bin/pip ]; then ln -s pip3 /usr/bin/pip ; fi && \
-		if [[ ! -e /usr/bin/python ]]; then ln -sf /usr/bin/python3 /usr/bin/python; fi && \
-		rm -r /root/.cache
+FROM python:3.6-alpine
 
 COPY . /root
 WORKDIR /root
@@ -16,5 +8,10 @@ RUN mkdir -p /srv/media
 VOLUME ["/srv/media"]
 #COPY mpd.conf /etc/mpd.conf
 
-RUN pip3 install -r requirement.txt
+RUN apk update && \
+    apk add postgresql-libs && \
+    apk add --virtual .build-deps gcc musl-dev postgresql-dev && \
+    python3 -m pip install -r requirement.txt --no-cache-dir && \
+    apk --purge del .build-deps
+
 CMD ["python3", "main.py"]
