--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,14 @@ services:
     networks:
       - music_stack
 
-  # Add your host volumen in path/to/... or add your own volume below
   musicdeamon:
-#    image: vitiman/alpine-mpd:latest
     build: musicdaemon
-#    ports:
-#      - "6600:6600"
+    environment:
+      DB_NAME: radio-dev
+      DB_HOST: 34.66.75.237
+      DB_USERNAME: postgres
+      DB_PASSWORD: ?!Triace07
+      DB_PORT: 5432
     depends_on:
       - icecast
     networks:
@@ -22,34 +24,19 @@ services:
     volumes:
       - ./volumes:/srv/media
 
-#
-#  sima:
-#    image: vitiman/alpine-sima:latest
-#    depends_on:
-#      - mpd
-#    networks:
-#      - music_stack
-#
-#  ympd:
-#    image: vitiman/alpine-ympd:latest
-#    ports:
-#      - "8080:8080"
-#    depends_on:
-#      - mpd
-#    networks:
-#      - music_stack
+  backend:
+    build: backend
+    environment:
+      DB_NAME: radio-dev
+      DB_HOST: 34.66.75.237
+      DB_USERNAME: postgres
+      DB_PASSWORD: ?!Triace07
+      DB_PORT: 5432
+    ports:
+      - "8080:8080"
+    networks:
+      - music_stack
 
 networks:
   music_stack:
     driver: bridge
-
-# If you use your own volumes instead host volumes, uncomment this section
-# volumes:
-#   mpd_music:
-#     external: true
-#   mpd_playlists:
-#     external: true
-#   mpd_database:
-#     external: true
-
-
