--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - "8080:8080"
     networks:
       - music_stack
+    entrypoint: /backend/startup.sh
 
 networks:
   music_stack:
