exposed new port 9000, server close bug fixed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       DB_PORT: 5432
     depends_on:
       - icecast
+    ports:
+      - "9000:9000"
     networks:
       - music_stack
     volumes:
