API 서버 기본코드 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       DB_USERNAME: postgres
       DB_PASSWORD: ?!Triace07
       DB_PORT: 5432
+      DJANGO_SETTINGS: local
     ports:
       - "8080:8080"
     networks:
