docker 이미지 빌드 수정. musicdaemon config 연동 수정

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,14 +3,17 @@ FROM python:3.6-alpine
 ENV PYTHONUNBUFFERED 0
 
 COPY . /backend
+WORKDIR /backend
+
+COPY accounts-0.0.1.tar.gz /backend/accounts-0.0.1.tar.gz
+COPY django_utils-0.0.1.tar.gz /backend/django_utils-0.0.1.tar.gz
 
 RUN apk update && \
     apk add postgresql-libs && \
     apk add --virtual .build-deps gcc musl-dev postgresql-dev && \
-    python3 -m pip install -r /backend/requirement.txt --no-cache-dir && \
+    python3 -m pip install -r requirement.txt --no-cache-dir && \
     apk --purge del .build-deps
 
-WORKDIR /backend
 EXPOSE 8080
 
 RUN chmod +x startup.sh
