--- a/musicdaemon/config.ini
+++ b/musicdaemon/config.ini
@@ -3,24 +3,27 @@ musicdaemon = yui, alice, miku
 server = server
 
 [icecast2_yui]
-url = http://127.0.0.1:8000
+host = 127.0.0.1
+port = 8000
 mount = yui
-username =
-password =
+user =
+source_password =
 codec = mp3
 
 [icecast2_alice]
-url = http://127.0.0.1:8000
+host = 127.0.0.1
+port = 8000
 mount = alice
-username =
-password =
+user =
+source_password =
 codec = mp3
 
 [icecast2_miku]
-url = http://127.0.0.1:8000
+host = 127.0.0.1
+port = 8000
 mount = miku
-username =
-password =
+user =
+source_password =
 codec = mp3
 
 [callback]
