--- a/musicdaemon/Dockerfile
+++ b/musicdaemon/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.6-alpine
+FROM ubuntu:18.04
 
 COPY . /daemon
 WORKDIR /daemon
@@ -8,12 +8,11 @@ RUN mkdir -p /srv/media
 VOLUME ["/srv/media"]
 COPY config.ini ./config.ini
 
-RUN apk update && \
-    apk add postgresql-libs && \
-    apk add --virtual .build-deps gcc musl-dev postgresql-dev && \
-    python3 -m pip install -r requirement.txt --no-cache-dir && \
-    apk --purge del .build-deps
+RUN apt-get -y update
+RUN apt-get install -y python3.6 python3-pip software-properties-common libshout3
+
+RUN python3 -m pip install -r requirement.txt
 
 EXPOSE 9000
 
-CMD ["python3", "main.py"]
+ENTRYPOINT ["python3", "main.py"]
