--- a/musicdaemon/config.ini
+++ b/musicdaemon/config.ini
@@ -6,26 +6,33 @@ server = server
 host = 127.0.0.1
 port = 8000
 mount = yui
-user =
-source_password =
+user = source
+password = hackme
 codec = mp3
+name = A Power of Trance CH.YUI
+genre = Trance
 
 [icecast2_alice]
 host = 127.0.0.1
 port = 8000
 mount = alice
-user =
-source_password =
+user = source
+password = hackme
 codec = mp3
+name = A Power of Trance CH.ALICE
+genre = POP
 
 [icecast2_miku]
 host = 127.0.0.1
 port = 8000
 mount = miku
-user =
-source_password =
+user = source
+password = hackme
 codec = mp3
+name = A Power of Trance CH.MIKU
+genre = Subculture
 
 [callback]
 on_startup =
 on_play =
+on_stop =
