--- a/musicdaemon/config.ini
+++ b/musicdaemon/config.ini
@@ -11,6 +11,9 @@ password = hackme
 codec = mp3
 name = A Power of Trance CH.YUI
 genre = Trance
+bitrate = 128000
+samplerate = 44100
+url =
 
 [icecast2_alice]
 host = 127.0.0.1
@@ -21,6 +24,9 @@ password = hackme
 codec = mp3
 name = A Power of Trance CH.ALICE
 genre = POP
+bitrate = 128000
+samplerate = 44100
+url =
 
 [icecast2_miku]
 host = 127.0.0.1
@@ -31,8 +37,21 @@ password = hackme
 codec = mp3
 name = A Power of Trance CH.MIKU
 genre = Subculture
+bitrate = 128000
+samplerate = 44100
+url =
 
-[callback]
+[callback_yui]
+on_startup = https://r3xgeyodxb.execute-api.ap-northeast-2.amazonaws.com/test
+on_play =
+on_stop = https://ezlzag93l0.execute-api.ap-northeast-2.amazonaws.com/test
+
+[callback_alice]
+on_startup =
+on_play =
+on_stop =
+
+[callback_miku]
 on_startup =
 on_play =
 on_stop =
