callback 데이터 연동

--- a/musicdaemon/config.ini
+++ b/musicdaemon/config.ini
@@ -43,8 +43,8 @@ url =
 
 [callback_yui]
 on_startup = https://r3xgeyodxb.execute-api.ap-northeast-2.amazonaws.com/test
-on_play =
-on_stop = https://ezlzag93l0.execute-api.ap-northeast-2.amazonaws.com/test
+on_play = https://ezlzag93l0.execute-api.ap-northeast-2.amazonaws.com/test
+on_stop = https://rnw46ry881.execute-api.ap-northeast-2.amazonaws.com/test
 
 [callback_alice]
 on_startup =
