--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,22 +7,16 @@ services:
     ports:
       - "8000:8000"
     networks:
-      - music_stack
+      apoweroftrance:
+        ipv4_address: 10.0.0.2
 
   musicdeamon:
     build: musicdaemon
-    environment:
-      DB_NAME: radio-dev
-      DB_HOST: 34.66.75.237
-      DB_USERNAME: postgres
-      DB_PASSWORD: ?!Triace07
-      DB_PORT: 5432
-    depends_on:
-      - icecast
     ports:
       - "9000:9000"
     networks:
-      - music_stack
+      apoweroftrance:
+        ipv4_address: 10.0.0.3
     volumes:
       - ./volumes:/srv/media
 
@@ -38,10 +32,17 @@ services:
     ports:
       - "8080:8080"
     networks:
-      - music_stack
+      apoweroftrance:
+        ipv4_address: 10.0.0.4
     volumes:
       - ~/.config/gcloud/:/root/.config/gcloud
 
 networks:
-  music_stack:
+  apoweroftrance:
     driver: bridge
+    driver_opts:
+      encrypted: "true"
+    ipam:
+      config:
+        - subnet: 10.0.0.0/16
+          gateway: 10.0.0.1
