add django-accounts as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "musicdaemon"]
 	path = musicdaemon
 	url = https://github.com/whiteblue3/apoweroftrance-musicdaemon.git
+[submodule "django-accounts"]
+	path = django-accounts
+	url = https://github.com/whiteblue3/apoweroftrance-account.git
