add django-utils as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "django-accounts"]
 	path = django-accounts
 	url = https://github.com/whiteblue3/apoweroftrance-account.git
+[submodule "django-utils"]
+	path = django-utils
+	url = https://github.com/whiteblue3/apoweroftrance-django-utils.git
