--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       apoweroftrance:
         ipv4_address: 10.0.0.2
     volumes:
-      - ./icecast/icecast.xml:/usr/share/icecast/icecast.xml
+      - ./icecast.xml:/usr/share/icecast/icecast.xml
 
   musicdeamon:
 #    build: musicdaemon
@@ -26,7 +26,7 @@ services:
       apoweroftrance:
         ipv4_address: 10.0.0.3
     volumes:
-      - ./musicdaemon/config.ini:/opt/musicdaemon/config.ini
+      - ./config.ini:/opt/musicdaemon/config.ini
       - ./apoweroftrance-525255671db2.json:/root/service-account-key.json
 #      - ./volumes:/srv/media
 
