nginx, uwsgi 기반으로 django deploy 환경 구축

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,20 @@
-FROM python:3.6-alpine
+FROM python:3.6-slim
 
 ENV PYTHONUNBUFFERED 0
 
-COPY . /backend
+VOLUME ["/backend"]
+
+#COPY . /backend
 WORKDIR /backend
 
-COPY accounts-0.0.1.tar.gz /backend/accounts-0.0.1.tar.gz
-COPY django_utils-0.0.1.tar.gz /backend/django_utils-0.0.1.tar.gz
+COPY startup.sh /backend/startup.sh
 
-RUN apk update && \
-    apk add postgresql-libs && \
-    apk add --virtual .build-deps gcc musl-dev postgresql-dev && \
-    python3 -m pip install -r requirement.txt --no-cache-dir && \
-    apk --purge del .build-deps
+RUN apt-get -y update
+RUN apt-get -y install build-essential vim
 
-EXPOSE 8080
+RUN python3 -m pip install --upgrade pip
+#RUN python3 -m pip install -r requirement.txt
 
-RUN chmod +x startup.sh
+RUN chmod a+x startup.sh
 
 ENTRYPOINT ["/backend/startup.sh"]
