--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
   icecast:
     container_name: icecast
     restart: always
-#    build: icecast
     image: gcr.io/apoweroftrance/icecast2:latest
     ports:
       - "8000:8000"
@@ -17,8 +16,7 @@ services:
   musicdeamon:
     container_name: musicdaemon
     restart: always
-    build: musicdaemon
-#    image: gcr.io/apoweroftrance/musicdaemon:latest
+    image: gcr.io/apoweroftrance/musicdaemon:latest
     environment:
       FUSE: gcs
       BUCKET: apoweroftrance-media
@@ -39,7 +37,6 @@ services:
     container_name: nginx
     restart: always
     image: gcr.io/apoweroftrance/nginx:latest
-#    build: nginx
     ports:
       - "80:80"
     volumes:
@@ -59,7 +56,6 @@ services:
     container_name: radio
     restart: always
     image: gcr.io/apoweroftrance/django:latest
-#    build: backend
     environment:
       DB_NAME: radio-dev
       DB_HOST: 34.66.75.237
