--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -67,10 +67,10 @@ http {
     # Secure HTTP Header
     ##
 
-    add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload";
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
-    add_header Cache-Control "no-cache, no-store, must-revalidate";
+    #add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload";
+    #add_header X-Frame-Options "SAMEORIGIN";
+    #add_header X-Content-Type-Options "nosniff";
+    #add_header Cache-Control "no-cache, no-store, must-revalidate";
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "no-referrer-when-downgrade";
 
