--- a/config.ini
+++ b/config.ini
@@ -10,6 +10,7 @@ user = source
 password = hackme
 codec = mp3
 name = A Power of Trance CH.YUI
+description = A Power of Trance - Trance channel
 genre = Trance
 bitrate = 128000
 samplerate = 44100
@@ -23,6 +24,7 @@ user = source
 password = hackme
 codec = mp3
 name = A Power of Trance CH.ALICE
+description = A Power of Trance - EDM, POP channel
 genre = POP
 bitrate = 128000
 samplerate = 44100
@@ -36,6 +38,7 @@ user = source
 password = hackme
 codec = mp3
 name = A Power of Trance CH.MIKU
+description = A Power of Trance - ANI, Game, Subculture channel
 genre = Subculture
 bitrate = 128000
 samplerate = 44100
@@ -43,8 +46,8 @@ url =
 
 [callback_yui]
 on_startup = https://r3xgeyodxb.execute-api.ap-northeast-2.amazonaws.com/test
-on_play = https://ezlzag93l0.execute-api.ap-northeast-2.amazonaws.com/test
-on_stop = https://rnw46ry881.execute-api.ap-northeast-2.amazonaws.com/test
+on_play =
+on_stop =
 
 [callback_alice]
 on_startup =
