--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,7 +1,11 @@
 FROM nginx:latest
 
 RUN apt-get -y update
-RUN apt-get -y install nginx-extras vim
+RUN apt-get -y install --no-install-recommends nginx-extras vim \
+    && apt-get purge -y --auto-remove \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN rm -f /var/cache/apt/archives/*.rpm /var/cache/apt/*.bin /var/lib/apt/lists/*.*;
 
 EXPOSE 80
 
