docker root 유저 보안이슈 해결

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,27 +2,27 @@ FROM python:3.6-slim
 
 ENV PYTHONUNBUFFERED 0
 
-ARG USER=user
-RUN groupadd -r ${USER} && useradd --no-log-init -r -g ${USER} ${USER}
+# using when FUSE is gcs
+ENV GOOGLE_APPLICATION_CREDENTIALS /backend/service-account-key.json
 
 RUN mkdir /backend
 # Uncomment when production
-#COPY --chown=${USER}:${USER} . /backend/
+#COPY . /backend/
 WORKDIR /backend
 
-COPY --chown=${USER}:${USER} ./django_utils-0.0.1.tar.gz /backend/
-COPY --chown=${USER}:${USER} ./accounts-0.0.1.tar.gz /backend/
+RUN apt-get update && apt-get -y install --no-install-recommends build-essential vim gnupg curl \
+    && rm -rf /var/lib/apt/lists/*
 
-COPY --chown=${USER}:${USER} ./requirement.txt /backend/
-COPY --chown=${USER}:${USER} ./startup.sh /backend/
-
-RUN apt-get -y update
-RUN apt-get -y install --no-install-recommends build-essential vim \
+# Install gcloud.
+RUN apt-get install --no-install-recommends -y apt-transport-https ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
+RUN echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+RUN curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+RUN apt-get update
+RUN apt-get install --no-install-recommends -y google-cloud-sdk \
     && rm -rf /var/lib/apt/lists/*
 
 RUN rm -f /var/cache/apt/archives/*.rpm /var/cache/apt/*.bin /var/lib/apt/lists/*.*;
-
-RUN python3 -m pip install --upgrade pip
 
 ENV DJANGO_SETTINGS_MODULE=app.settings
 ENV UWSGI_WSGI_FILE=/backend/app/wsgi.py
@@ -31,12 +31,24 @@ ENV UWSGI_WORKERS=2 UWSGI_THREADS=4
 ENV UWSGI_STATIC_MAP="/static/=/backend/.static/" UWSGI_STATIC_EXPIRES_URI="/static/.*\.[a-f0-9]{12,}\.(css|js|png|jpg|jpeg|gif|ico|woff|ttf|otf|svg|scss|map|txt) 315360000"
 #ENV UWSGI_ROUTE_HOST="^(?!10.0.0.4:8080$) break:400"
 
+ENV USER=ubuntu
+RUN useradd -rm -d /home/${USER} -s /bin/bash --no-log-init ${USER}
+
+#RUN chown -R ${USER}:${USER} /backend
+
+COPY ./startup.sh /backend/startup.sh
+RUN chmod a+x /backend/startup.sh
+
+#COPY ./django_utils-0.0.1.tar.gz /backend/
+#COPY ./accounts-0.0.1.tar.gz /backend/
+#COPY ./requirement.txt /backend/
+
+RUN python3 -m pip install --upgrade pip \
+    && python3 -m pip install uwsgi==2.0.18
+
 # Uncomment when production
 #RUN python3 -m pip install --no-cache-dir -r requirement.txt
 
-RUN chmod a+x startup.sh
+USER ${USER}
 
-CMD ["/backend/startup.sh"]
-
-#USER ${USER}:${USER}
-#ENTRYPOINT ["/bin/bash"]
+CMD ["./startup.sh"]
