--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:latest
 
 RUN apt-get -y update
-RUN apt-get -y install --no-install-recommends nginx-extras vim \
+RUN apt-get -y install --no-install-recommends nginx-extras \
     && rm -rf /var/lib/apt/lists/*
 
 RUN rm -f /var/cache/apt/archives/*.rpm /var/cache/apt/*.bin /var/lib/apt/lists/*.*;
