nginx를 non-root 모드로 동작하도록 수정

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -28,7 +28,7 @@ ENV UWSGI_HTTP=0.0.0.0:8080
 ENV UWSGI_MASTER=1 UWSGI_HTTP_AUTO_CHUNKED=1 UWSGI_HTTP_KEEPALIVE=1 UWSGI_LAZY_APPS=1 UWSGI_WSGI_ENV_BEHAVIOR=holy
 ENV UWSGI_WORKERS=2 UWSGI_THREADS=4
 ENV UWSGI_STATIC_MAP="/static/=/backend/.static/" UWSGI_STATIC_EXPIRES_URI="/static/.*\.[a-f0-9]{12,}\.(css|js|png|jpg|jpeg|gif|ico|woff|ttf|otf|svg|scss|map|txt) 315360000"
-ENV UWSGI_ROUTE_HOST="^(?!${NGINX}$) break:400"
+#ENV UWSGI_ROUTE_HOST="^(?!${NGINX}$) break:400"
 
 EXPOSE 8080
 
