--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,18 +41,17 @@ services:
   nginx:
     container_name: nginx
     restart: always
-    image: gcr.io/apoweroftrance/nginx:latest
+#    image: gcr.io/apoweroftrance/nginx:latest
+    image: nginxinc/nginx-unprivileged:latest
 #    build: nginx
     ports:
-      - "80:80"
+      - "80:8080"
     volumes:
       - ./nginx/config/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/config/sites-available/default:/etc/nginx/sites-available/default
       - ./nginx/config/useragent.rules:/etc/nginx/useragent.rules
       - ./nginx/config/cors:/etc/nginx/cors
       - ./nginx/config/whitelist.conf:/etc/nginx/whitelist.conf
-    depends_on:
-      - radio
     networks:
       apoweroftrance:
         ipv4_address: 10.0.0.4
@@ -60,15 +59,15 @@ services:
   radio:
     container_name: radio
     restart: always
-    image: gcr.io/apoweroftrance/radio:latest
-#    build: backend
+#    image: gcr.io/apoweroftrance/radio:latest
+    build: backend
     environment:
       DB_NAME: radio-dev
       DB_HOST: 34.66.75.237
       DB_USERNAME: postgres
       DB_PASSWORD: ?!Triace07
       DB_PORT: 5432
-      NGINX: 10.0.0.4:80
+      NGINX: 10.0.0.4:8080
     ports:
       - "8080:8080"
     networks:
