--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -1,11 +1,12 @@
-#user nginx; # www-data
+#user www-data; # www-data
 worker_processes auto;
-pid /run/nginx.pid;
+#pid /run/nginx.pid;
+pid /tmp/nginx.pid; # for nginx-unprivileged
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
     worker_connections 768;
-    multi_accept on;
+    # multi_accept on;
 }
 
 http {
@@ -84,7 +85,7 @@ http {
     proxy_hide_header X-Powered-By;
     proxy_hide_header X-Pingback;
     proxy_hide_header X-Link;
-    more_set_headers "Server: server";
+    #more_set_headers "Server: server";
 
     set_real_ip_from 0.0.0.0/0;
     real_ip_header X-Forwarded-For;
