--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,17 +41,18 @@ services:
   nginx:
     container_name: nginx
     restart: always
-#    image: gcr.io/apoweroftrance/nginx:latest
-    image: nginxinc/nginx-unprivileged:latest
-#    build: nginx
+    image: gcr.io/apoweroftrance/nginx:latest
+#    image: nginxinc/nginx-unprivileged:latest
     ports:
-      - "80:8080"
+      - "80:80"
     volumes:
       - ./nginx/config/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/config/sites-available/default:/etc/nginx/sites-available/default
       - ./nginx/config/useragent.rules:/etc/nginx/useragent.rules
       - ./nginx/config/cors:/etc/nginx/cors
       - ./nginx/config/whitelist.conf:/etc/nginx/whitelist.conf
+    depends_on:
+      - radio
     networks:
       apoweroftrance:
         ipv4_address: 10.0.0.4
@@ -67,7 +68,7 @@ services:
       DB_USERNAME: postgres
       DB_PASSWORD: ?!Triace07
       DB_PORT: 5432
-      NGINX: 10.0.0.4:8080
+      NGINX: 10.0.0.4:80
     ports:
       - "8080:8080"
     networks:
