--- a/config.ini
+++ b/config.ini
@@ -12,7 +12,7 @@ codec = mp3
 name = A Power of Trance CH.YUI
 description = A Power of Trance - Trance channel
 genre = Trance
-bitrate = 128000
+bitrate = 192000
 samplerate = 44100
 url =
 
@@ -25,8 +25,8 @@ password = hackme
 codec = mp3
 name = A Power of Trance CH.ALICE
 description = A Power of Trance - EDM, POP channel
-genre = POP
-bitrate = 128000
+genre = EDM, POP
+bitrate = 192000
 samplerate = 44100
 url =
 
@@ -39,15 +39,15 @@ password = hackme
 codec = mp3
 name = A Power of Trance CH.MIKU
 description = A Power of Trance - ANI, Game, Subculture channel
-genre = Subculture
-bitrate = 128000
+genre = ANI, Game, Subculture
+bitrate = 192000
 samplerate = 44100
 url =
 
 [callback_yui]
-on_startup = https://r3xgeyodxb.execute-api.ap-northeast-2.amazonaws.com/test
-on_play =
-on_stop =
+on_startup = http://10.0.0.4:8080/v1/radio/callback/on_startup/yui
+on_play = http://10.0.0.4:8080/v1/radio/callback/on_play/yui
+on_stop = http://10.0.0.4:8080/v1/radio/callback/on_stop/yui
 
 [callback_alice]
 on_startup =
