--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -3,6 +3,8 @@ server {
     listen [::]:8080 default_server ipv6only=on;
     charset utf-8;
 
+    client_max_body_size 50M;
+
     # SSL configuration TLS
 
     #listen 443 ssl http2 default_server;
@@ -37,6 +39,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_redirect off;
+        proxy_send_timeout 120;
+        proxy_read_timeout 120;
 
         proxy_pass http://10.0.0.5:8090;
 
