--- a/config.ini
+++ b/config.ini
@@ -24,9 +24,9 @@ user = source
 password = hackme
 codec = mp3
 name = A Power of Trance CH.ALICE
-description = A Power of Trance - EDM, POP channel
-genre = EDM, POP
-bitrate = 192000
+description = A Power of Trance - Trance Premium channel
+genre = Trance
+bitrate = 320000
 samplerate = 44100
 url =
 
@@ -38,7 +38,7 @@ user = source
 password = hackme
 codec = mp3
 name = A Power of Trance CH.MIKU
-description = A Power of Trance - ANI, Game, Subculture channel
+description = A Power of Trance - Subculture channel
 genre = ANI, Game, Subculture
 bitrate = 192000
 samplerate = 44100
@@ -58,3 +58,18 @@ on_stop =
 on_startup =
 on_play =
 on_stop =
+
+[redis_yui]
+host = 10.0.0.6
+port = 6379
+key = yui
+
+[redis_alice]
+host = 10.0.0.6
+port = 6379
+key = alice
+
+[redis_miku]
+host = 10.0.0.6
+port = 6379
+key = miku
