개발용 데이터베이스도 도커로 이전

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -52,6 +52,8 @@ RUN mkdir -p /etc/gcloud
 #COPY . /backend/
 #RUN python3 -m pip install --no-cache-dir -r requirement.txt
 
+RUN apt-get update && apt-get install netcat-openbsd -y
+
 ENV REDIS_URL "127.0.0.1"
 ENV REDIS_PORT 6379
 
