--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
   musicdeamon:
     container_name: musicdaemon
     restart: always
-#    image: gcr.io/apoweroftrance/musicdaemon:latest
-    build: musicdaemon
+    image: gcr.io/apoweroftrance/musicdaemon:latest
+#    build: musicdaemon
     environment:
       FUSE: gcs
       BUCKET: apoweroftrance-media
@@ -25,8 +25,6 @@ services:
       WAIT_SERVICE: 1
       WAIT_URL: 10.0.0.5
       WAIT_PORT: 8090
-      REDIS_URL: 10.0.0.6
-      REDIS_PORT: 6379
     command:
       - /bin/bash
       - -c
@@ -68,27 +66,36 @@ services:
   radio:
     container_name: radio
     restart: always
-#    image: gcr.io/apoweroftrance/radio:latest
-    build: backend
+    image: gcr.io/apoweroftrance/radio:latest
+#    build: backend
     environment:
-      DB_NAME: radio-dev
-      DB_HOST: 34.66.75.237
-      DB_USERNAME: postgres
-      DB_PASSWORD: ?!Triace07
-      DB_PORT: 5432
+#      DB_NAME: radio-dev
+#      DB_HOST: 104.154.248.234
+#      DB_USERNAME: postgres
+#      DB_PASSWORD: ?!Triace07
+#      DB_PORT: 5432
       NGINX: 10.0.0.4:8080
       REDIS_URL: 10.0.0.6
       REDIS_PORT: 6379
     depends_on:
       - redis
+      - db
     links:
       - redis
+      - db
     command:
       - /bin/bash
       - -c
       - |
+        while ! nc 10.0.0.7 5432; do
+          >&2 echo "Wait database service - sleeping"
+          sleep 1
+        done
         python3 -m pip install -r requirement.txt
         python3 manage.py collectstatic --noinput -i yes
+        python3 manage.py migrate --noinput
+        python3 manage.py makemigrations accounts
+        python3 manage.py makemigrations radio
         python3 manage.py migrate
         uwsgi --show-config
     ports:
@@ -117,6 +124,27 @@ services:
       apoweroftrance:
         ipv4_address: 10.0.0.6
 
+  db:
+    container_name: db
+    image: postgres:11.6
+    environment:
+      POSTGRES_USER: whiteblue3
+      POSTGRES_PASSWORD: ?!Triace07
+      POSTGRES_DB: radio
+      PGDATA: /var/postgres_data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER"]
+      interval: 3s
+      timeout: 1s
+      retries: 5
+    ports:
+      - "5432:5432"
+    networks:
+      apoweroftrance:
+        ipv4_address: 10.0.0.7
+    volumes:
+      - pgdata:/var/postgres_data
+
 volumes:
   radio_data:
     driver_opts:
@@ -128,6 +156,7 @@ volumes:
       type: none
       device: /Users/whiteblue3/Documents/dev/projects/apoweroftrance.com/source/radio/musicdaemon #NOTE needs full path (~ doesn't work)
       o: bind
+  pgdata:
 
 networks:
   apoweroftrance:
