--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,9 +1,11 @@
+upstream django {
+    server 10.0.0.5:8090;
+}
+
 server {
     listen 8080 default_server;
     listen [::]:8080 default_server ipv6only=on;
     charset utf-8;
-
-    client_max_body_size 50M;
 
     # SSL configuration TLS
 
@@ -25,6 +27,8 @@ server {
 
     #include /etc/nginx/whitelist.conf;
 
+    client_max_body_size 50m;
+
     location / {
         limit_except GET POST PUT PATCH DELETE {
             deny all;
@@ -36,15 +40,24 @@ server {
 
         #try_files $uri $uri/ /404.html;
 
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_redirect off;
-        proxy_send_timeout 120;
-        proxy_read_timeout 120;
-
-        proxy_pass http://10.0.0.5:8090;
-
+        proxy_set_header X-FORWARDED-FOR $remote_addr;
         proxy_set_header REMOTE_ADDR $remote_addr;
+
+        include /etc/nginx/uwsgi_params;
+
+        uwsgi_pass_request_body on;
+        uwsgi_pass_request_headers on;
+
+        #uwsgi_pass_request_body off;
+        #uwsgi_param CONTENT_LENGTH 0;
+
+        uwsgi_read_timeout 300;
+        uwsgi_send_timeout 300;
+        uwsgi_connect_timeout 300;
+
+        uwsgi_max_temp_file_size 50M;
+
+        uwsgi_pass django;
     }
 
     location ~ /\.ht {
